# py3

./: .gitignore  dodo.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
pp/: inout.py
src/pp/: __init__.py  a.py  aio.py  inout.py  taskgroup.py
tests/: conftest.py  test_a.py
