[build-system]
requires = ["build", "setuptools", "wheel", "setuptools_scm[toml]", "pip-tools", "packaging", "doit"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"
addopts = "--mypy"

[tool.mypy]
warn_unused_configs = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py310

[testenv]
deps = -rrequirements-dev.txt
commands = pytest
"""
